addons/care_config_relaunch_v2/static/src/css/care_multistep.css
/* ... */
/* Hide lock symbol */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.lock-sign,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.lock-text {
    display: none;
}

/* Panels */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.panel.panel-default {
    border: none;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .panel-footer,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd-checkout-box .panel-body {
    border: none;
    background-color: white;
    padding: 0px !important;
}

/* Serach box */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#product_detail div:has(input[name=search]) {
    display: table;
}

/* Fix two column setup by making left column full width */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.wsd_cfi_buttons {
    padding-left: 16px;
    padding-right: 16px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form #wsd_checkout_form_submit_button .glyphicon,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form .wsd_button_back_to_page .glyphicon {
    top: unset !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_page_left_column,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_payment_page_left_col
{
    width: 100% !important;
    position: unset !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form_inside_row div.row.billing-fields {
    width: 100%;
    max-width: 100%;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#website_sale_donate > div > div {
    padding-right: 0px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#product_detail,
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_page_left_column{
    padding-left: 0px;
    padding-right: 0px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form_inside_row > div:nth-child(2) {
    padding: 0 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#wsd_checkout_form_inside_row div.row.billing-fields {
    padding 0 !important;
    margin: 0 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method > div:nth-child(1) {
    padding: 0;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method {
    margin-top: 24.5px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method #aq3 label {
    font-weight: normal;
    color: #898989 !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#payment_method #aq3 label.un-focused.empty {
    font-weight: normal;
    color: #222 !important;
}

/* payment acquirer boxes */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
ul.nav.nav-tabs li {
    height: 134px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
ul.nav.nav-tabs li .tab-acquirer-image {
    padding-top: 10px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.tab-content {
    border: 0px solid transparent !important;
    padding: 0px !important;
    padding-top: 20px !important;
}

/* Acquirer messages */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.acquirer_pre_msg {
    font-size: 20px;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.acquirer_pre_msg * {
    font-family: 'Fira Sans Condensed' !important;
    font-size: 20px !important;
    color: black !important;
}

/* Acquirer IBAN */

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
label[for="frst_iban"] {
    font-weight: regular !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban::-webkit-input-placeholder {
/* WebKit browsers */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban:-moz-placeholder {
/* Mozilla Firefox 4 to 18 */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban::-moz-placeholder {
/* Mozilla Firefox 19+ */
    color: transparent;
}
/* ... */

